--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "sass-brunch": "^2.6.3"
   },
   "devDependencies": {
-    "javascript-brunch": "^2.0.0",
-    "css-brunch": "^2.0.0",
-    "uglify-js-brunch": "^2.0.0",
+    "auto-reload-brunch": "^2.0.0",
+    "brunch": "^2.8.0",
     "clean-css-brunch": "^2.0.0",
-    "auto-reload-brunch": "^2.0.0"
+    "css-brunch": "^2.0.0",
+    "javascript-brunch": "^2.0.0",
+    "uglify-js-brunch": "^2.0.0"
   }
 }
